tests/NormalTests/paczka1/small_fuzzy/70063727.err
Error in line 1: E7lVrPRUqs S870 79,7
Error in line 6: uHzZk6i6 S348 39,6
Error in line 4: E7lVrPRUqs S348 74,4
